--- a/app/src/main/res/layout/activity_add_user_info.xml
+++ b/app/src/main/res/layout/activity_add_user_info.xml
@@ -60,133 +60,111 @@
         app:civ_border_width="2dp"
         app:civ_border_color="@color/input" />
 
-    <EditText
-        android:id="@+id/usernameInput"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/usernameContainer"
         android:layout_width="350dp"
         android:layout_height="50dp"
+        android:hint="@string/username"
         android:layout_marginTop="25dp"
-        android:autofillHints="username input"
-        android:background="@drawable/selector_rounded_input_5"
-        android:ems="10"
-        android:hint="Tên người dùng"
-        android:inputType="textPersonName"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="5dp"
-        android:textColorHint="@color/input"
-        android:textSize="16sp"
+        app:startIconDrawable="@drawable/ic_user"
+        app:startIconTint="@color/input"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/avatar" />
+        app:layout_constraintTop_toBottomOf="@+id/avatar"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-
-    <LinearLayout
-        android:id="@+id/genderContainer"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="25dp"
-        android:weightSum="10"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameInput">
-
-        <TextView
-            android:id="@+id/genderLabel"
-            android:layout_width="0dp"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/usernameInput"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="Giới tính:"
-            android:textSize="16sp" />
-
-        <RadioGroup
-            android:id="@+id/genderInput"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="8"
-            android:weightSum="10"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/genderMale"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:text="Nam"
-                android:checked="true"/>
-
-            <RadioButton
-                android:id="@+id/genderFemale"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:text="Nữ" />
-        </RadioGroup>
-    </LinearLayout>
-
-    <EditText
-        android:id="@+id/phoneInput"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:autofillHints="phone number input"
-        android:background="@drawable/selector_rounded_input_5"
-        android:ems="10"
-        android:hint="Số điện thoại"
-        android:inputType="phone"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="5dp"
-        android:textColorHint="@color/input"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/genderContainer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/birthContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/phoneInput"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" >
-
-        <EditText
-            android:id="@+id/birthInput"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
             android:paddingHorizontal="15dp"
             android:paddingVertical="5dp"
-            android:ems="10"
-            android:hint="Ngày sinh"
-            android:autofillHints="birthday input"
-            android:inputType="date"
-            android:textColorHint="@color/input"
             android:textSize="16sp"
-            android:background="@drawable/selector_rounded_input_5"
-            app:layout_constraintTop_toTopOf="@+id/birthContainer"
-            app:layout_constraintEnd_toEndOf="@+id/birthContainer"
-            app:layout_constraintStart_toStartOf="@+id/birthContainer"
-            app:layout_constraintBottom_toBottomOf="@+id/birthContainer" />
+            android:inputType="textPersonName" />
 
-        <ImageButton
-            android:id="@+id/birthCalendar"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginEnd="3dp"
-            android:background="@android:color/transparent"
-            app:layout_constraintTop_toTopOf="@+id/birthContainer"
-            app:layout_constraintEnd_toEndOf="@+id/birthContainer"
-            app:layout_constraintBottom_toBottomOf="@+id/birthContainer"
-            app:srcCompat="@drawable/ic_calendar" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/genderContainer"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:hint="@string/gender"
+        android:layout_marginTop="25dp"
+        app:startIconDrawable="@drawable/ic_gender"
+        app:startIconTint="@color/input"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usernameContainer"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+
+        <AutoCompleteTextView
+            android:id="@+id/genderInput"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="5dp"
+            android:textSize="16sp"
+            android:inputType="none"
+            tools:ignore="LabelFor" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/phoneContainer"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:hint="@string/phone"
+        android:layout_marginTop="25dp"
+        app:startIconDrawable="@drawable/ic_phone"
+        app:startIconTint="@color/input"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/genderContainer"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/phoneInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="5dp"
+            android:textSize="16sp"
+            android:inputType="phone" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/birthContainer"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:hint="@string/birthday"
+        android:layout_marginTop="25dp"
+        app:startIconDrawable="@drawable/ic_calendar"
+        app:startIconTint="@color/input"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phoneContainer"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/birthInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="5dp"
+            android:textSize="16sp"
+            android:clickable="false"
+            android:focusable="false"
+            android:inputType="date" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/submit"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
-        android:background="@drawable/shape_rounded_btn_5_0194f3"
-        android:text="Tiếp"
+        android:text="@string/txt_continue"
         android:textSize="16sp"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
