--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#0194F3</color>
+    <color name="inactive">#F8F9FC</color>
 
     <color name="background_color">#FBFBFD</color>
     <color name="background_color_50">#B3FFFFFF</color>
