--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -6,19 +6,15 @@
     android:layout_marginEnd="10dp"
     android:background="@color/background_color"
     android:padding="10dp">
-    <ImageView
-        android:id="@+id/img_avatartrip"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:paddingLeft="10dp"
-        android:src="@mipmap/ic_launcher" />
+
 
     <LinearLayout
+
         android:id="@+id/container_itemtrip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_toEndOf="@+id/img_avatartrip"
+        android:paddingLeft="10dp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -33,11 +29,13 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Đi:" />
+                android:text="Đi:"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:text="Đến:" />
         </LinearLayout>
 
@@ -73,11 +71,13 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:text="Bắt Đầu:" />
             <TextView
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:text="Kết Thúc:" />
         </LinearLayout>
         <LinearLayout
